app/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gcc-app-service
  labels:
    app: gcc-app
spec:
  type: ClusterIP
  selector:
    app: gcc-app
  ports:
  - protocol: TCP
    port: 80
    targetPort: 3000
    name: http
